src/objects/Order_Complaint__c.object
<CustomObject>
    <fields>
        <fullName>Complaint_Desription__c</fullName>
        <label>Complaint Desription</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <referenceTo>Order__c</referenceTo>
        <relationshipLabel>Order Complaints</relationshipLabel>
        <relationshipName>Order_Complaints</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Advertising/Sales Issues</fullName>
                </value>
                <value>
                    <fullName>Wrong Product Delivered</fullName>
                </value>
                <value>
                    <fullName>Billing/Collection Issues</fullName>
                </value>
                <value>
                    <fullName>Delivery Issues</fullName>
                </value>
                <value>
                    <fullName>Guarantee/Warranty Issues</fullName>
                </value>
                <value>
                    <fullName>Problems with Product/Service</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Order Complaint</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>C - {0000}</displayFormat>
        <label>Complaint Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Complaints</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>